# toolbox

./: .env.example  .env.monitoring.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spec.md  vision.md
.github/workflows/: build_base.yml  test_package.yml
ai_commit/: README.md  pyproject.toml  setup.cfg
ai_commit/ai_commit/: .pre-commit-hooks.yaml  cli.py  llm_backend_async.py  map_reduce_summarizer.py  summarizer.py
docker/monitoring/: Dockerfile.agent  Dockerfile.dev  Dockerfile.monitor
docs/: zed-settings-example.json
scripts/: container_setup.sh  entrypoint.sh  headless_gpu_setup.sh  setup_remote.sh
src/ai_commit/: cli.py  llm_backend_async.py  map_reduce_summarizer.py  pyproject.toml
src/instancebot/: __init__.py  cli.py  lambda_watchdog.py  openapi-spec.json
src/mlt/: README.md  pyproject.toml
src/mlt/mlt/: __init__.py  cli.py  config.py  container.py  lsp_proxy.py  sync_watchdog.py
src/mltoolbox/: mlt_cli.py
src/mltoolbox/base/: Dockerfile  Dockerfile.arm  Dockerfile.cuda  Dockerfile.gh200  Dockerfile.mac  Dockerfile.ray-head  docker-compose-ray-head.yml  docker-compose-ray.yml  docker-compose.yml  requirements.txt
src/mltoolbox/base/scripts/: entrypoint.sh  ray-init.sh
src/mltoolbox/cli/: __init__.py  container.py  init.py  local.py  remote.py  variant.py
src/mltoolbox/clients/lambda_client/: README.md  pyproject.toml  setup.py
src/mltoolbox/clients/lambda_client/.openapi-generator/: FILES
src/mltoolbox/clients/lambda_client/docs/: AddSSHKey200Response.md  AddSSHKeyRequest.md  DefaultApi.md  Error.md  ErrorCode.md  ErrorResponseBody.md  FileSystem.md  GetInstance200Response.md  Instance.md  InstanceType.md  InstanceTypeSpecs.md  InstanceTypes200Response.md  InstanceTypes200ResponseDataValue.md  LaunchInstance200Response.md  LaunchInstance200ResponseData.md  LaunchInstanceRequest.md  ListFileSystems200Response.md  ListInstances200Response.md  ListSSHKeys200Response.md  Region.md  RestartInstance200Response.md  RestartInstance200ResponseData.md  RestartInstanceRequest.md  SshKey.md  TerminateInstance200Response.md  TerminateInstance200ResponseData.md  TerminateInstanceRequest.md  User.md
src/mltoolbox/clients/lambda_client/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/mltoolbox/clients/lambda_client/openapi_client/api/: default_api.py
src/mltoolbox/clients/lambda_client/openapi_client/models/: __init__.py  add_ssh_key200_response.py  add_ssh_key_request.py  error.py  error_code.py  error_response_body.py  file_system.py  get_instance200_response.py  instance.py  instance_type.py  instance_type_specs.py  instance_types200_response.py  instance_types200_response_data_value.py  launch_instance200_response.py  launch_instance200_response_data.py  launch_instance_request.py  list_file_systems200_response.py  list_instances200_response.py  list_ssh_keys200_response.py  region.py  restart_instance200_response.py  restart_instance200_response_data.py  restart_instance_request.py  ssh_key.py  terminate_instance200_response.py  terminate_instance200_response_data.py  terminate_instance_request.py  user.py
src/mltoolbox/clients/lambda_client/test/: test_add_ssh_key200_response.py  test_add_ssh_key_request.py  test_default_api.py  test_error.py  test_error_code.py  test_error_response_body.py  test_file_system.py  test_get_instance200_response.py  test_instance.py  test_instance_type.py  test_instance_type_specs.py  test_instance_types200_response.py  test_instance_types200_response_data_value.py  test_launch_instance200_response.py  test_launch_instance200_response_data.py  test_launch_instance_request.py  test_list_file_systems200_response.py  test_list_instances200_response.py  test_list_ssh_keys200_response.py  test_region.py  test_restart_instance200_response.py  test_restart_instance200_response_data.py  test_restart_instance_request.py  test_ssh_key.py  test_terminate_instance200_response.py  test_terminate_instance200_response_data.py  test_terminate_instance_request.py  test_user.py
src/mltoolbox/monitoring/: auth.py  logger.py  main.py  middleware.py  models.py  monitor.py
src/mltoolbox/monitoring/agent/: agent.py  main.py
src/mltoolbox/monitoring/backends/: __init__.py  base.py  dryrun.py  lambda_labs.py
src/mltoolbox/monitoring/notifier/: __init__.py  base.py  discord.py  slack.py
src/mltoolbox/monitoring/requirements/: requirements-agent.txt  requirements-dev.txt  requirements-monitor.txt
src/mltoolbox/templates/: .env.j2  Dockerfile.j2  Dockerfile.mac.j2  devcontainer.json.j2  docker-compose.yml.j2  pyproject.toml.j2  zed-settings.json.j2
src/mltoolbox/utils/: db.py  docker.py  enhanced_docker.py  helpers.py  logger.py  remote.py  session.py  sftp.py  stage_cache.py  subprocess_helper.py  templates.py
src/mltoolbox/web/: package-lock.json  package.json
utils/: ai_commit.py  download.sh  install_ai_commit.sh
