[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mltoolbox"
version = "2.0.0.dev0"
description = "ML Development Environment Management Tools"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "tomli>=2.0.0",
    "setuptools==68.2.2",
    "paramiko==3.5.0",
    "openai"
]

[project.scripts]
mltoolbox = "mltoolbox.cli:cli"
ai-commit-msg = "ai_commit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mltoolbox", "src/ai_commit"]

[tool.hatch.build.targets.wheel.force-include]
"src/mltoolbox/base" = "mltoolbox/base"
"src/mltoolbox/templates" = "mltoolbox/templates"
