[project]
name = "mltoolbox"
version = "2.0.0.dev0"
description = "ML Development Environment Management Tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "jinja2>=3.1.0",
    "tomli>=2.0.0",
    "paramiko>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
]

[project.scripts]
mltoolbox = "mltoolbox.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mltoolbox"]

[tool.hatch.build.targets.wheel.force-include]
"src/mltoolbox/base" = "mltoolbox/base"
"src/mltoolbox/templates" = "mltoolbox/templates"
