[project]
name = "toolbox"
version = "2.1.1.dev1"
description = "Unified toolbox for research workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sidharth Baskaran" }
]
license = { text = "MIT" }

# Core dependencies (minimal set)
dependencies = [
    "click>=8.0.0",
    "colorlog>=6.9.0",
    "python-dotenv>=0.19.0",
    "rich>=14.0.0",
    "setuptools==80.9.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
# MLToolbox specific dependencies
mltoolbox = [
    "jinja2>=3.1.0",
    "tomli>=2.0.0",
    "paramiko>=3.5.0",
    "colorlog>=6.7.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
]

# AI Commit is now a separate package - removed from this monorepo

# Instancebot specific dependencies
instancebot = [
    # No additional dependencies beyond core (uses only stdlib + python-dotenv)
]

# Install all packages
all = [
    "toolbox[mltoolbox]",
    "toolbox[instancebot]",
]

# Development dependencies
dev = [
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/sidbaskaran/toolbox"
Repository = "https://github.com/sidbaskaran/toolbox.git"

[project.scripts]
mltoolbox = "mltoolbox.cli:cli"
mlt = "mltoolbox.mlt_cli:main"
instancebot = "instancebot.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mltoolbox", "src/instancebot"]

[tool.hatch.build.targets.wheel.force-include]
"src/mltoolbox/base" = "mltoolbox/base"
"src/mltoolbox/templates" = "mltoolbox/templates"
