[metadata]
name = ai_commit
version = 0.1.0
description = AI-powered commit message generation utility
author = sidbaskaran
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sidbaskaran/toolbox

[options]
packages = find:
python_requires = >=3.7
install_requires =
    python-dotenv
    openai>=1.0.0
    aiohttp>=3.7.0

[options.entry_points]
console_scripts =
    ai-commit = ai_commit.cli:main