[project]
name = "ai-commit"
version = "2.0.0.dev0"
description = "AI-powered commit message generator"
readme = "../../README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sidharth Baskaran" }
]
license = { text = "MIT" }

dependencies = [
    "click>=8.0.0",
    "colorlog>=6.9.0",
    "python-dotenv>=0.19.0",
    "rich>=14.0.0",
    "openai",
    "together",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/sidnb13/toolbox"
Repository = "https://github.com/sidnb13/toolbox.git"

[project.scripts]
ai-commit = "ai_commit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 