[project]
name = "ai-commit"
version = "v0.1.0.dev0"
description = "AI-powered commit message generator"
readme = "../../README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sidharth Baskaran" }
]
license = { text = "MIT" }

dependencies = [
    "python-dotenv>=0.19.0",
    "openai",
    "together",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/sidnb13/toolbox"
Repository = "https://github.com/sidnb13/toolbox.git"

[project.scripts]
ai-commit = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 